--- a/tabfigures.dtx
+++ b/tabfigures.dtx
@@ -22,13 +22,10 @@
 %
 %\iffalse
 %<*driver>
-\NeedsTeXFormat{LaTeX2e}
-\ProvidesFile{tabfigures.dtx}
+\ProvidesFile{tabfigures.dtx}[2011/09/17 v1.0 Patches for using tabular figures]
 %</driver>
-%<package>\ProvidesPackage{tabfigures}
-%<*driver|package>
-[2007/05/07 v0.1d Tabular figures (patches)]
-%</driver|package>
+%<package>\NeedsTeXFormat{LaTeX2e}
+%<package>\ProvidesPackage{tabfigures}[2011/09/17 v1.0 Patches for using tabular figures]
 %<*driver>
 \documentclass{ltxdoc}
 \usepackage{MinionPro}
