--- a/tabfigures.dtx
+++ b/tabfigures.dtx
@@ -96,8 +96,15 @@
 % \title{Using tabular figures with \LaTeX}
 % \author{Andreas B\"uhmann \and Michael Ummels}
 % \date{\fileversion\ -- \filedate}
-%
 % \maketitle
+%
+% \begin{abstract}
+%  The \pkg{tabfigures} packages is a collection of patches that
+%  inject a command to use tabular figures in some LaTeX environments
+%  where numbers should line up vertically, such as the table of
+%  contents and enumerations.
+% \end{abstract}
+%  
 %
 % \section{Introduction}
 % 
@@ -114,7 +121,7 @@
 % like Minion Pro, which use proportional figures by default, you
 % have to specifically adapt your document class or even the \LaTeX\
 % kernel to employ tabular figures in the right places:
-% the table of contents, enumerations or other material where
+% the table of contents, enumerations and other material where
 % numbers should line up vertically. The \pkg{tabfigures} package tries
 % to assist you in the most common situations.
 %
