--- a/tabfigures.dtx
+++ b/tabfigures.dtx
@@ -99,7 +99,7 @@
 % \maketitle
 %
 % \begin{abstract}
-%  The \pkg{tabfigures} packages is a collection of patches that
+%  The \pkg{tabfigures} package is a collection of patches that
 %  inject a command to use tabular figures in some LaTeX environments
 %  where numbers should line up vertically, such as the table of
 %  contents and enumerations.
