--- a/tabfigures.dtx
+++ b/tabfigures.dtx
@@ -99,10 +99,9 @@
 % \maketitle
 %
 % \begin{abstract}
-%  The \pkg{tabfigures} package is a collection of patches that
-%  inject a command to use tabular figures in some LaTeX environments
-%  where numbers should line up vertically, such as the table of
-%  contents and enumerations.
+%  The \pkg{tabfigures} package is a collection of patches for using
+%  tabular figures in some LaTeX environments where numbers should
+%  line up vertically such as the table of contents and enumerations.
 % \end{abstract}
 %  
 %
