Replaced hyperref by hypdoc

--- a/tabfigures.dtx
+++ b/tabfigures.dtx
@@ -40,7 +40,7 @@
 \usepackage[toc,eqno,enum,bib,lineno,debug]{tabfigures}
 \usepackage[fleqn]{mathtools}
 \usepackage{array}
-\usepackage{hyperref}
+\usepackage{hypdoc}
 \usepackage{microtype}
 
 \hypersetup{
