--- a/tabfigures.dtx
+++ b/tabfigures.dtx
@@ -299,7 +299,7 @@
 \DeclareOption{toc}{%
   \AtBeginDocument{%
 %    \end{macrocode}
-% Generic. First two command that are using in formatting the lists by
+% Generic. First two command that are used in formatting the lists by
 % default.
 %    \begin{macrocode}
     \tabfig@def\@dottedtocline#1#2#3#4#5{%
